--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,11 @@ header {
 
 .logo {
     margin-top: 0.2em;
+    width: 100px;
 }
 
 .logo img {
-    width: 100px;
+    width: 100%;
 }
 
 .info {
@@ -63,6 +64,14 @@ main {
     padding-top: 125px;
 }
 
+#hero {
+    max-width: 960px;
+}
+
+#hero img {
+    width: 100%;
+}
+
 .section_articles {
     display: flex;
     flex-wrap: wrap;
@@ -76,6 +85,7 @@ main {
 }
 
 .article {
+    max-width: 290px;
     box-shadow: 0 0 4px darkgray;
     border-radius: 8px;
     margin: 0 0.25em 1em 0.25em;
@@ -87,7 +97,7 @@ main {
 }
 
 .article img {
-    max-width: 290px;
+    width: 100%;
 }
 
 .article h1 {
