wrapped the social icons of the footer in a div with a class social_icon_container and adjusted the margin of the h1 of the footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,9 +147,13 @@ footer {
 
 footer h1 {
     font-size: 1.8em;
-    margin: 0.5em;
+    margin: 0.2em;
     font-weight: 300;
     display: inline-block;
+}
+
+.social_icon_container {
+    display: flex;
 }
 
 .social_icon {
