--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ header {
     position: fixed;
     width: 100%;
     background-color: rgba(222, 0, 0, 1);
-    /* background-color: black; */
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.8);
 }
 
@@ -90,6 +89,7 @@ main {
     border-radius: 8px;
     margin: 0 0.25em 1em 0.25em;
     transition: background 2s ease;
+    text-align: center;
 }
 
 .article:hover {
@@ -252,6 +252,62 @@ header {
 
 .my_info {
     font-size: 1.4rem;
+    text-align: right;
+}
+
+/* =================================Main============================ */
+main {
+    padding-top: 90px;
+}
+
+#hero img {
+    box-shadow: 0 0 4px gray;
+}
+
+.section_header {
+    text-align: center;
+}
+
+/* =================================Footer====================================== */
+
+footer h1 {
+    margin-bottom: 0;
+}
+}
+
+/* =====================================================
+for screen size between 421 - 780 px
+===================================================== */
+
+@media screen and (min-width: 421px) and (max-width: 960px) {
+
+/* =======================Header======================== */
+
+header {
+    position: fixed;
+    margin-bottom: 0.5em;
+}
+
+.logo {
+    width: 70px;
+}
+
+.logo_plus_info {
+    margin: 0 8px;
+}
+
+.info {
+    margin: 0;
+}
+
+.my_name {
+    font-size: 2rem;
+    line-height: 2rem;
+    text-align: right;
+}
+
+.my_info {
+    font-size: 1.2rem;
     text-align: right;
 }
 
