--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,11 @@ main {
     align-items: center;
 }
 
+.article_info {
+    margin: 0.5em 0.5em 0 0.5em;
+    font-size: 1rem;
+}
+
 .btn {
     width: 100px;
     margin: 1em;
