--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,9 @@ main {
     text-decoration: none;
 }
 
-.article_1, .article_2, .article_3 {
+.article_1,
+.article_2,
+.article_3 {
     display: flex;
     flex-direction: column;
     align-items: center;
